--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "sass": "^1.63.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
